# OpenGLJourney

./: CMakeLists.txt  main.cpp
shaders/: lit.frag  static.vert
src/applications/: Application.h  CubeApp.cpp  CubeApp.h  TriangleApp.cpp  TriangleApp.h
src/opengl/: Attribute.cpp  Attribute.h  Draw.cpp  Draw.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  VertexArray.cpp  VertexArray.h
